--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-Slate
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
